[project]
name = "learning-langchain-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "langchain-postgres>=0.0.15",
    "langchain-text-splitters>=0.3.8",
]
